- Change the default loader to grid-loader.

--- a/RockWeb/Styles/style-v2/rock-components/_update-panel-status.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_update-panel-status.scss
@@ -14,96 +14,200 @@
 .updateprogress-status {
   position:   fixed;
   top:        40%;
-  left:       50%;
+  left:       45%;
   z-index:    ($zindex-modal-background + 100);
-  padding:    var(--spacing-medium) var(--spacing-xsmall);
+  padding:    var(--spacing-large) var(--spacing-large);
   margin-left: -30px;
   background-color: var(--color-primary);
   border-radius:    120px;
   box-shadow:       5px 5px 12px 3px rgba(0,0,0,.1);
   opacity:          1;
 
-  .spinner {
-    width:      40px;
-    height:     30px;
-    font-size:  var(--font-size-xsmall);
-    text-align: center;
+  .grid-loader {
+    --uib-size: 90px;
+    --uib-color: var(--color-interface-softest);
+    --uib-speed: 1.5s;
+    --uib-dot-size: calc(var(--uib-size) * 0.1);
+    position: relative;
+    z-index:    ($zindex-modal-background + 100);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: calc(var(--uib-size) * 0.64);
+    width: calc(var(--uib-size) * 0.64);
+  }
+  
+
+  @keyframes jump {
+    0%,
+    100% {
+      transform: translateY(120%);
+    }
+
+    50% {
+      transform: translateY(-120%);
+    }
   }
 
-  .spinner > div {
-    display: inline-block;
-    width: 5px;
+  .dot {
+    --uib-d1: -0.48;
+    --uib-d2: -0.4;
+    --uib-d3: -0.32;
+    --uib-d4: -0.24;
+    --uib-d5: -0.16;
+    --uib-d6: -0.08;
+    --uib-d7: -0;
+    position: absolute;
+    bottom: calc(var(--uib-bottom) + var(--uib-dot-size) / 2);
+    right: calc(var(--uib-right) + var(--uib-dot-size) / 2);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    height: var(--uib-dot-size);
+    width: var(--uib-dot-size);
+    animation: jump var(--uib-speed) ease-in-out infinite;
+    opacity: var(--uib-scale);
+    will-change: transform;
+    backface-visibility: hidden;
+  }
+
+  .dot::before {
+    content: '';
     height: 100%;
-    margin-right: 2px;
-    background-color: var(--color-interface-softest);
-    -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-    animation: stretchdelay 1.2s infinite ease-in-out;
+    width: 100%;
+    background-color: var(--uib-color);
+    border-radius: 50%;
+    transform: scale(var(--uib-scale));
+    transition: background-color 0.3s ease;
   }
 
-  .spinner .rect2 {
-    -webkit-animation-delay: -1.1s;
-    animation-delay: -1.1s;
+  .dot:nth-child(1) {
+    --uib-bottom: 24%;
+    --uib-right: -35%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d1));
+  }
+  .dot:nth-child(2) {
+    --uib-bottom: 16%;
+    --uib-right: -6%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d2));
+  }
+  .dot:nth-child(3) {
+    --uib-bottom: 8%;
+    --uib-right: 23%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d3));
+  }
+  .dot:nth-child(4) {
+    --uib-bottom: -1%;
+    --uib-right: 51%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d4));
+  }
+  .dot:nth-child(5) {
+    --uib-bottom: 38%;
+    --uib-right: -17.5%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d2));
+  }
+  .dot:nth-child(6) {
+    --uib-bottom: 30%;
+    --uib-right: 10%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d3));
+  }
+  .dot:nth-child(7) {
+    --uib-bottom: 22%;
+    --uib-right: 39%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d4));
+  }
+  .dot:nth-child(8) {
+    --uib-bottom: 14%;
+    --uib-right: 67%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d5));
+  }
+  .dot:nth-child(9) {
+    --uib-bottom: 53%;
+    --uib-right: -0.8%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d3));
+  }
+  .dot:nth-child(10) {
+    --uib-bottom: 44.5%;
+    --uib-right: 27%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d4));
+  }
+  .dot:nth-child(11) {
+    --uib-bottom: 36%;
+    --uib-right: 55.7%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d5));
+  }
+  .dot:nth-child(12) {
+    --uib-bottom: 28.7%;
+    --uib-right: 84.3%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d6));
+  }
+  .dot:nth-child(13) {
+    --uib-bottom: 66.8%;
+    --uib-right: 15%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d4));
+  }
+  .dot:nth-child(14) {
+    --uib-bottom: 58.8%;
+    --uib-right: 43%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d5));
+  }
+  .dot:nth-child(15) {
+    --uib-bottom: 50%;
+    --uib-right: 72%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d6));
+  }
+  .dot:nth-child(16) {
+    --uib-bottom: 42%;
+    --uib-right: 100%;
+    animation-delay: calc(var(--uib-speed) * var(--uib-d7));
   }
 
-  .spinner .rect3 {
-    -webkit-animation-delay: -1s;
-    animation-delay: -1s;
+  .dot:nth-child(3) {
+    --uib-scale: 0.98;
+  }
+  .dot:nth-child(2),
+  .dot:nth-child(8) {
+    --uib-scale: 0.96;
+  }
+  .dot:nth-child(1),
+  .dot:nth-child(7) {
+    --uib-scale: 0.94;
+  }
+  .dot:nth-child(6),
+  .dot:nth-child(12) {
+    --uib-scale: 0.92;
+  }
+  .dot:nth-child(5),
+  .dot:nth-child(11) {
+    --uib-scale: 0.9;
+  }
+  .dot:nth-child(10),
+  .dot:nth-child(16) {
+    --uib-scale: 0.88;
+  }
+  .dot:nth-child(9),
+  .dot:nth-child(15) {
+    --uib-scale: 0.86;
+  }
+  .dot:nth-child(14) {
+    --uib-scale: 0.84;
+  }
+  .dot:nth-child(13) {
+    --uib-scale: 0.82;
   }
 
-  .spinner .rect4 {
-    -webkit-animation-delay: -.9s;
-    animation-delay: -.9s;
-  }
-
-  .spinner .rect5 {
-    -webkit-animation-delay: -.8s;
-    animation-delay: -.8s;
-  }
-
-  @-webkit-keyframes stretchdelay {
-    0%,
-    40%,
-    100% {
-      -webkit-transform: scaleY(.4);
-    }
-
-    20% {
-      -webkit-transform: scaleY(1);
-    }
-  }
-
-  @keyframes stretchdelay {
-    0%,
-    40%,
-    100% {
-      -webkit-transform: scaleY(.4);
-      transform: scaleY(.4);
-    }
-
-    20% {
-      -webkit-transform: scaleY(1);
-      transform: scaleY(1);
-    }
-  }
 }
 
 @media (min-width: $screen-medium) {
+  .grid-loader {
+    --uib-size: 140px !important;
+  }
+
   .updateprogress-status {
-    padding: 30px 20px;
+    padding: var(--spacing-xlarge) var(--spacing-xlarge);
     margin-left: -60px;
-
-    .spinner {
-      width: 80px;
-      height: 60px;
-
-      > div {
-        width: 10px;
-        margin-right: 3px;
-      }
-    }
   }
 }
 // ====================== END BASE STYLE ======================
-
 
 
