- continue polishing the style v2.

--- a/RockWeb/Styles/style-v2/components/_dropdowns.scss
+++ b/RockWeb/Styles/style-v2/components/_dropdowns.scss
@@ -42,7 +42,7 @@
   min-width:        $dropdown-min-width;
   padding:          var(--spacing-tiny) 0;
   margin:           2px 0 0;
-  font-size:        var(--font-size-regular);
+  font-size:        var(--font-size-small);
   text-align:       left;
   list-style:       none;
   background-color: var(--color-interface-softest);
