--- a/RockWeb/Styles/style-v2/components/_forms.scss
+++ b/RockWeb/Styles/style-v2/components/_forms.scss
@@ -126,6 +126,7 @@ output {
   border:             1px solid var(--color-interface-soft);
   border-radius:      var(--rounded-xsmall); // Note: This has no effect on <select>s in some browsers, due to the limited stylability of <select>s in CSS.
   // box-shadow:         inset 0 1px 1px rgba(0, 0, 0, .075); // Comment out because in rock the textbox have a box-shadow: none.
+  box-shadow:         var(--input-box-shadow);
   transition:         border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 
   // Customize the `:focus` state to imitate native WebKit styles.
