- Fix lms kickback items

--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -644,7 +644,7 @@
       }
     }
 
-    // 2.2.3 Acknowledgement
+    // 2.2.3 Acknowledgment
     // -------------------------
 
     .header-content-section {
@@ -675,6 +675,9 @@
         grid-column: 2;
     }
 
+    .lms-completion-container .file-upload-section {
+        margin-top: var(--spacing-medium);
+    }
 
     // 2.2.5 Video Watch
     // -------------------------
