--- a/RockWeb/Styles/style-v2/blocks/_blocks-crm.scss
+++ b/RockWeb/Styles/style-v2/blocks/_blocks-crm.scss
@@ -378,7 +378,7 @@ $badge-count-width: 18px;
 
   .badge-content {
     font-size:  .888em;
-    color:      var(--color-info-soft);
+    color:      var(--color-info-strong);
 
     &.today {
       .metric-value {
