--- a/RockWeb/Styles/style-v2/rock-components/_person-program-step.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_person-program-step.scss
@@ -42,7 +42,7 @@
   min-height:               260px;
   overflow:                 hidden;
   text-align:               center;
-  border:                   1px solid var(--theme-light);
+  border:                   1px solid var(--color-interface-soft);
   -webkit-transform-style:  preserve-3d;
   -moz-transform-style:     preserve-3d;
   transform-style:          preserve-3d;
