--- a/RockWeb/Styles/Blocks/Shared/DragPallet.css
+++ b/RockWeb/Styles/Blocks/Shared/DragPallet.css
@@ -13,17 +13,17 @@
     float: left;
     width: 45%;
     padding: 12px 0 4px;
-    margin: 6px 2.5%;
-    font-size: 12px;
-    color: #2d2e31;
+    margin: var(--spacing-xsmall) var(--spacing-xsmall);
+    font-size: var(--font-size-xsmall);
+    color: var(--color-interface-strong);
     text-align: center;
     cursor: -webkit-grab;
     cursor: -moz-grab;
     cursor: grab;
     zoom: 1;
-    background-color: var(--theme-white);
-    border: 1px solid transparent;
-    border-radius: 2px;
+    background-color: var(--color-interface-softest);
+    border: 1px solid var(--color-interface-soft);
+    border-radius: var(--rounded-small);
     box-shadow: 0 2px 2px rgba(0,0,0,0.05);
 }
 .components-list .component > i {
