- Continue polishing the style-v2

--- a/RockWeb/Styles/style-v2/components/_panels.scss
+++ b/RockWeb/Styles/style-v2/components/_panels.scss
@@ -992,7 +992,7 @@
   .panel-heading {
     .panel-title {
       small {
-        opacity: .5;
+        color: var(--color-interface-medium);
       }
     }
 
