--- a/RockWeb/Styles/style-v2/rock-components/_panel.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_panel.scss
@@ -170,7 +170,7 @@
     border-bottom:        1px solid var(--color-interface-soft);
     background-color:     var(--color-interface-softest);
     // border-bottom-color:  var(--color-interface-soft);
-    padding-left:         var(--spacing-large);
+    padding-left:         var(--spacing-medium);
     height:               56px; // to match the NextGen grid
 
     & .panel-title {
