--- a/RockWeb/Themes/NextGenCheckin/Styles/theme.css
+++ b/RockWeb/Themes/NextGenCheckin/Styles/theme.css
@@ -16,7 +16,8 @@ html {
 }
 
 body {
-  margin: 0;
+    margin: 0;
+    overflow: hidden; /* Prevents drag scrolling the window beyond the body's bounds  */
 }
 
 article,
