--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -674,7 +674,7 @@
     .grading-section {
       margin-top: 12px;
       display: grid;
-      grid-template-columns: 50%;
+      grid-template-columns: 50% 50%;
     }
 
     .file-section {
