--- a/RockWeb/Styles/_blocks-lms.less
+++ b/RockWeb/Styles/_blocks-lms.less
@@ -289,6 +289,12 @@
       flex-direction: column;
   }
 
+  .course-completed-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   .workspace-main-content-header {
     display: flex;
     flex-direction: column;
