--- a/RockWeb/Styles/rock-components/sliding-date-range.less
+++ b/RockWeb/Styles/rock-components/sliding-date-range.less
@@ -6,3 +6,13 @@
 .input-group-sm .slidingdaterange-daterange .input-group-addon {
   .input-size(@input-height-small; @padding-small-vertical; @padding-small-horizontal; @font-size-small; @line-height-small; @input-border-radius-small);
 }
+
+.form-control-group {
+  .picker-daterange.slidingdaterange-daterange {
+    > div {
+      display: flex;
+      align-items: center;
+      gap: var(--spacing-xsmall);
+    }
+  }
+}
