- Improved CSS targeting for workflow activity type icon so it no longer matches child panels.

--- a/RockWeb/Styles/_blocks-core.less
+++ b/RockWeb/Styles/_blocks-core.less
@@ -687,7 +687,7 @@
     line-height: 1.5;
   }
 
-  .panel-title::before {
+  .filter-toggle .panel-title::before {
     display: inline-flex;
     align-items: center;
     justify-content: center;
