--- a/Rock.JavaScript/src/streamchat/chatComponent.css
+++ b/Rock.JavaScript/src/streamchat/chatComponent.css
@@ -397,6 +397,32 @@
     flex-direction: column;
 }
 
+.rock-chat__message-simple.str-chat__message--me,
+.str-chat__quoted-message-preview.str-chat__message--me,
+.str-chat__quoted-message-preview.str-chat__message--me {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    /* header / content / footer */
+    grid-template-areas:
+        "header"
+        "content"
+        "footer";
+    column-gap: var(--str-chat__spacing-2);
+}
+
+.rock-chat__message-simple.str-chat__message--me .str-chat__message-inner {
+    grid-area: content;
+}
+
+.rock-chat__message-simple.str-chat__message--me .rock-message-footer {
+    grid-area: footer;
+    align-items: end;
+    padding-top: 0.25rem;
+    display: flex;
+    flex-direction: column;
+}
+
 .str-chat__message-simple__actions .str-chat__message-options .str-chat__message-options--active {
     align-items: center;
 }
