--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -61,6 +61,7 @@
   --color-warning-shade:    var(--base-warning);
   
   /* System colors */
+  --color-primary-soft:          var(--base-primary);
   --color-primary:          var(--base-primary);
   --color-primary-tint:     var(--base-primary);
   --color-primary-shade:    var(--base-primary);
@@ -98,6 +99,7 @@
     --color-warning-shade:  color-mix(in srgb, var(--base-warning) 100%, #000 var(--shade-black-percentage));
   
     --color-primary-tint:   color-mix(in srgb, var(--base-primary) 50%, transparent var(--tint-white-percentage));
+    --color-primary-soft:   color-mix(in srgb, var(--base-primary) 25%, transparent var(--tint-white-percentage));
     --color-primary-shade:  color-mix(in srgb, var(--base-primary) 100%, #000 var(--shade-black-percentage));
   
     --color-link-tint:      color-mix(in srgb, var(--base-link) 50%, transparent var(--tint-white-percentage));
