--- a/RockWeb/Styles/style-v2/rock-components/_labels.scss
+++ b/RockWeb/Styles/style-v2/rock-components/_labels.scss
@@ -11,7 +11,7 @@
 // ======================== ALTERNATIVE STYLE ========================
 .label {
   a {
-    color: var(--color-interface-stronger); // allow for links in labels
+    color: inherit; // allow for links in labels
   }
 }
 
