--- a/RockWeb/Styles/style-v2/_css-variable.scss
+++ b/RockWeb/Styles/style-v2/_css-variable.scss
@@ -6,11 +6,11 @@
   --logo-image: url("../../../Assets/Images/rock-logo-circle-white.svg");
 
   --base-interface-strongest: #000000;
-  --base-interface-stronger:  #0d1117;
-  --base-interface-strong:    #3d444d;
+  --base-interface-stronger:  #1C1C1E;
+  --base-interface-strong:    #5D5D6F;
   --base-interface-medium:    #8B8BA7;
   --base-interface-soft:      #D9D9E3;
-  --base-interface-softer:    #f8f8fc;
+  --base-interface-softer:    #F2F2F7;
   --base-interface-softest:   #FFFFFF;
 
   --base-critical:    #ee7725;
