--- a/RockWeb/Styles/style-v2/components/_breadcrumbs.scss
+++ b/RockWeb/Styles/style-v2/components/_breadcrumbs.scss
@@ -11,7 +11,6 @@
 // ======================== BASE STYLE ========================
 .breadcrumb {
   padding:          var(--spacing-xsmall) var(--spacing-medium);
-  margin-bottom:    var(--spacing-large);
   list-style:       none;
   background-color: transparent;
   border-radius:    var(--rounded-small);
@@ -34,7 +33,7 @@
 
 
 // ======================== HEADER BREADCRUMB STYLE ========================
-.main-content .page-header {
+.page-title-display {
     .breadcrumb {
       padding:    0;
       margin:     0;
