--- a/RockWeb/Themes/RockV2/Styles/theme.scss
+++ b/RockWeb/Themes/RockV2/Styles/theme.scss
@@ -39,23 +39,16 @@ body.navbar-side-open {
 //   padding-left: 12px;
 // }
 
-.main-content {
-  padding: 5px 15px;
-
+.header-content {
+  
   #page-content {
     min-height: 600px;
   }
 
-  .page-header {
-    margin: -5px -15px 24px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    padding: 20px 15px;
-    margin: -5px -15px 5px;
+  .page-title-display {
     color: var(--color-interface-stronger);
-    background-color: var(--color-interface-softest);
-    border: 1px solid var(--color-interface-soft);
+    // Maybe a good idea to hardcode so that when people change the spacing it will not break the header
+    margin-left: 80px;
 
     .page-icon {
       display: none;
@@ -87,29 +80,16 @@ body.navbar-side-open {
       margin: 0;
     }
   }
-
-  @media (min-width: $screen-medium) {
-    padding: 0;
-    margin: 24px 24px 0; // tighten up the page
-  
-    .page-header {
-      padding:        var(--spacing-medium) var(--spacing-large);
-      margin:         0 0 24px 0;
-      box-shadow:     var(--box-shadow);
-      border-radius:  var(--rounded-medium);
-    }
-  }
-
   @media (max-width: ($screen-small - 1)) {
-    padding-left:   var(--spacing-medium);
-    padding-right:  var(--spacing-medium);
-
     .page-header {
       margin-left: 0;
       margin-right: 0;
     }
   }
+}
 
+.main-content {
+  padding: var(--spacing-medium) var(--spacing-medium);
 }
 
 .main-footer {
@@ -916,6 +896,7 @@ $hamburger-spacing: 4px;
 
 .rock-bookmark {
   --size: 32px;
+  padding: 20px;
   position: relative;
   display: inline-flex;
   align-items: center;
@@ -924,10 +905,10 @@ $hamburger-spacing: 4px;
   height: var(--size);
   margin: 0 8px 0 0;
   font-size: calc(var(--size) * 0.5);
-  color: var(--color-interface-medium);
-  background-color: var(--color-interface-softer);
-  border: 1px solid var(--color-interface-soft);
-  border-radius: var(--rounded-small);
+  color: var(--color-interface-strong);
+  background-color: var(--color-interface-soft);
+  border: 4px solid var(--color-interface-softer);
+  border-radius: 999px;
 
   &:hover {
     color: var(--color-interface-strong);
@@ -1352,3 +1333,4 @@ $hamburger-spacing: 4px;
 //   transition: opacity 1s;
 //   opacity: 1;
 // }
+
